# better-celery

./: Cargo.toml  docker-compose.yml
crates/coordinator/: Cargo.toml
crates/coordinator/src/: api.rs  db.rs  main.rs
crates/worker/: Cargo.toml
docker/: coordinator.Dockerfile
migrations/: 0001_init.sql
